<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="dev_conf_goal"
        android:title="@string/pref_device_body_goal"
        android:defaultValue="@string/pref_device_body_goal_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLines="1" />

    <EditTextPreference
        android:key="dev_conf_weight"
        android:title="@string/pref_device_body_weight"
        android:defaultValue="@string/pref_device_body_weight_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLines="1" />

    <EditTextPreference
        android:key="dev_conf_height"
        android:title="@string/pref_device_body_height"
        android:defaultValue="@string/pref_device_body_height_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLines="1" />

    <EditTextPreference
        android:key="dev_conf_age"
        android:title="@string/pref_device_body_age"
        android:defaultValue="@string/pref_device_body_age_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLines="1" />

    <ListPreference
        android:key="dev_conf_gender"
        android:title="@string/pref_device_body_gender"
        android:defaultValue="false"
        android:entries="@array/pref_device_body_gender_titles"
        android:entryValues="@array/pref_device_body_gender_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="dev_conf_gesture"
        android:title="@string/pref_device_gesture"
        android:summary="@string/pref_device_gesture_desc"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="dev_conf_light"
        android:title="@string/pref_device_light"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="dev_conf_autosleep"
        android:title="@string/pref_device_auto_sleep"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="dev_conf_use24hours"
        android:title="@string/pref_device_use24hours"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="dev_conf_englishunits"
        android:title="@string/pref_device_english_units"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="dev_conf_ble"
        android:title="@string/pref_device_ble_desc"
        android:defaultValue="false" />

</PreferenceScreen>
